# aavaaz

./: .gitattributes  .gitignore  DESIGN.md  DESIGN_TODO.md  Dockerfile  Dockerfile.lambda  Dockerfile.saas-lambda  LICENSE  README.md  pyproject.toml  uv.config.toml
.github/workflows/: ci.yml
aavaaz/: __init__.py  cli.py  saas_server.py  server.py  transcribe.py
aavaaz/api/: __init__.py  auth.py  dynamo_store.py  metrics.py  plans.py  saas.py  search.py  storage.py  webhooks.py
aavaaz/features/: __init__.py  acl.py  audio_intelligence.py  batch_inference.py  diarization.py  enrichment.py  ensemble.py  formatting.py  metrics.py  model_cache.py  multichannel.py  noise_reduction.py  pii_redaction.py  plugins.py  profanity_filter.py  search.py  storage.py  translation_relay.py  utterance.py  webhook.py
aavaaz/plugins/: __init__.py  builtins.py
aavaaz/sdks/: README.md  __init__.py
aavaaz/sdks/go/: aavaaz.go  go.mod
aavaaz/sdks/javascript/: aavaaz.ts  package.json
aavaaz/sdks/python/: __init__.py
aavaaz/serverless/: __init__.py  lambda_handler.py  saas_lambda.py
aavaaz/web/: __init__.py  index.html  live.html
dashboard/: .env.example  Dockerfile  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/confirm/: page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/dashboard/billing/: page.tsx
dashboard/src/app/dashboard/integrations/: page.tsx
dashboard/src/app/dashboard/keys/: page.tsx
dashboard/src/app/dashboard/live/: page.tsx
dashboard/src/app/dashboard/logs/: page.tsx
dashboard/src/app/dashboard/playground/: page.tsx
dashboard/src/app/dashboard/settings/: page.tsx
dashboard/src/app/dashboard/status/: page.tsx
dashboard/src/app/dashboard/team/: page.tsx
dashboard/src/app/dashboard/tts/: page.tsx
dashboard/src/app/dashboard/upload/: page.tsx
dashboard/src/app/dashboard/usage/: page.tsx
dashboard/src/app/dashboard/vocabulary/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/signup/: page.tsx
dashboard/src/lib/: api.ts  auth.tsx  aws-config.ts  upload-context.tsx
deploy/cloudflare/: worker.js  wrangler.toml
deploy/helm/aavaaz/: Chart.yaml  values.yaml
deploy/helm/aavaaz/templates/: deployment.yaml  ingress.yaml  service.yaml
deploy/modal/: app.py  app_live.py  app_tts.py
deploy/terraform/: README.md  main.tf
deploy/terraform-lambda/: README.md  budget_shutdown.py  deploy.sh  main.tf
deploy/terraform-saas/: README.md  helm-values-saas.yaml  k8s-dashboard.yaml  karpenter-gpu-nodepool.yaml  main.tf
deploy/terraform-serverless/: README.md  amplify.tf  main.tf
docs/: CLOUDFLARE.md  EDGE_DEPLOYMENT.md  FINE_TUNING.md  KEYCLOAK_SSO.md  MODAL.md  QA_CHECKLIST.md  SAAS.md  SCALING.md  SERVERLESS.md  TEST_MATRIX.md  USER_MANAGEMENT.md  aws-commercial-deployment.md
docs/site/: index.html
requirements/: base.txt  dev.txt  whisper.txt
tests/: test_acl.py  test_auth.py  test_auth_extended.py  test_batch_inference.py  test_deployment.py  test_diarization.py  test_dynamo_store.py  test_enrichment.py  test_ensemble.py  test_formatting.py  test_intelligence.py  test_metrics.py  test_model_cache.py  test_multichannel.py  test_noise_reduction.py  test_performance.py  test_pipeline.py  test_plugins.py  test_saas_api.py  test_saas_team.py  test_saas_transcripts.py  test_sdks.py  test_search.py  test_security.py  test_server.py  test_server_features.py  test_serverless.py  test_smoke.py  test_storage.py  test_transcribe.py  test_translation_relay.py  test_utterance.py  test_webhooks.py
