[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aavaaz"
version = "0.1.0"
description = "Production-grade speech-to-text platform built on WhisperLive"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.12"
authors = [
    {name = "Collabora Ltd"},
]
keywords = ["whisper", "transcription", "speech-to-text", "diarization", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "whisper-live>=0.8.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart",
    "PyJWT[crypto]",
    "boto3",
    "prometheus_client",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[project.scripts]
aavaaz = "aavaaz.cli:main"

[project.urls]
Homepage = "https://github.com/collabora/aavaaz"
Repository = "https://github.com/collabora/aavaaz"
Issues = "https://github.com/collabora/aavaaz/issues"

[tool.setuptools.packages.find]
include = ["aavaaz*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
