[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aavaaz"
version = "0.1.0"
description = "Aavaaz — production-grade speech-to-text platform built on WhisperLive"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.12"
authors = [
    {name = "Collabora Ltd"},
]
keywords = ["whisper", "transcription", "speech-to-text", "diarization", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart",
    "PyJWT[crypto]",
    "boto3",
    "prometheus_client",
]

[project.optional-dependencies]
whisper = [
    "whisper-live>=0.8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "httpx",
    "numpy",
    "ruff",
]

[project.scripts]
aavaaz = "aavaaz.cli:main"

[project.urls]
Homepage = "https://github.com/collabora/aavaaz"
Repository = "https://github.com/collabora/aavaaz"
Issues = "https://github.com/collabora/aavaaz/issues"

[tool.setuptools.packages.find]
include = ["aavaaz*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "B904", "SIM108", "B007", "SIM102", "SIM118", "UP042"]
per-file-ignores = {"aavaaz/features/*" = ["E501", "F841"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: end-to-end tests requiring model download (deselect with -m 'not smoke')",
]
